# jax_mpp

./: README.md  pyproject.toml
jax_mpp/: __init__.py  avit.py  configs.py  convert_weights.py  mixed_modules.py  shared_modules.py  spatial_modules.py  time_modules.py
scripts/: compare.py  convert.py
tests/: test_model.py
